test/corpus/vars-legal.txt
==========
Standlone int input
==========

10 INPUT = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str input
==========

10 INPUT$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int run
==========

10 RUN = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str run
==========

10 RUN$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int vlin
==========

10 VLIN = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str vlin
==========

10 VLIN$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int plot
==========

10 PLOT = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str plot
==========

10 PLOT$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int tab
==========

10 TAB = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str tab
==========

10 TAB$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int abs
==========

10 ABS = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str abs
==========

10 ABS$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int dsp
==========

10 DSP = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str dsp
==========

10 DSP$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int man
==========

10 MAN = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str man
==========

10 MAN$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int to
==========

10 TO = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str to
==========

10 TO$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int clr
==========

10 CLR = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str clr
==========

10 CLR$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int con
==========

10 CON = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str con
==========

10 CON$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int or
==========

10 OR = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str or
==========

10 OR$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int next
==========

10 NEXT = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str next
==========

10 NEXT$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int at
==========

10 AT = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str at
==========

10 AT$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int and
==========

10 AND = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str and
==========

10 AND$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int pdl
==========

10 PDL = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str pdl
==========

10 PDL$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int new
==========

10 NEW = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str new
==========

10 NEW$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int mod
==========

10 MOD = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str mod
==========

10 MOD$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int dim
==========

10 DIM = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str dim
==========

10 DIM$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int vtab
==========

10 VTAB = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str vtab
==========

10 VTAB$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int gosub
==========

10 GOSUB = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str gosub
==========

10 GOSUB$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int save
==========

10 SAVE = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str save
==========

10 SAVE$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int if
==========

10 IF = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str if
==========

10 IF$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int rnd
==========

10 RND = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str rnd
==========

10 RND$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int step
==========

10 STEP = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str step
==========

10 STEP$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int poke
==========

10 POKE = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str poke
==========

10 POKE$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int del
==========

10 DEL = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str del
==========

10 DEL$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int peek
==========

10 PEEK = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str peek
==========

10 PEEK$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int not
==========

10 NOT = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str not
==========

10 NOT$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int then
==========

10 THEN = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str then
==========

10 THEN$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int load
==========

10 LOAD = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str load
==========

10 LOAD$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int sgn
==========

10 SGN = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str sgn
==========

10 SGN$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int hlin
==========

10 HLIN = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str hlin
==========

10 HLIN$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int nodsp
==========

10 NODSP = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str nodsp
==========

10 NODSP$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int call
==========

10 CALL = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str call
==========

10 CALL$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Standlone int rem
==========

10 REM = 1

---

(source_file
(line (linenum) (statement (statement_rem) (comment_text) )))

==========
Standlone str rem
==========

10 REM$ = "1"

---

(source_file
(line (linenum) (statement (statement_rem) (comment_text) )))

==========
Standlone int let
==========

10 LET = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Standlone str let
==========

10 LET$ = "1"

---

(source_file
(line (linenum) (statement (assignment_str (str_name (dollar)) (op_eq_assign_str) (string (quote) (unquote))))))

==========
Postnumber int input
==========

10 INPUT1 = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Postnumber int print
==========

10 PRINT1 = 1

---

(source_file
(line (linenum) (statement (statement_print_int) (binary_aexpr (integer) (op_aeq) (integer)) )))

==========
Postnumber int run
==========

10 RUN1 = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Postnumber int plot
==========

10 PLOT1 = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Postnumber int vlin
==========

10 VLIN1 = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))

==========
Postnumber int tab
==========

10 TAB1 = 1

---

(source_file
(line (linenum) (statement (assignment_int (int_name) (op_eq_assign_int) (integer)))))
